# MaskingUltimate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  KICKOFF_PROMPT.md  pyproject.toml
.dvc/: .gitignore  config
Plan/: 00_MASTER_INDEX.md  01_PROJECT_CHARTER_AND_SCOPE.md  02_MASK_ONTOLOGY_SPEC.md  03_GOLD_MASK_FORMAT_SPEC.md  04_DATA_SCHEMAS_AND_MANIFESTS.md  05_SYSTEM_ARCHITECTURE.md  06_ENVIRONMENT_AND_INSTALLATION.md  07_PIPELINE_STAGE_SPECS.md  08_SPECIALIST_LANES_SPEC.md  09_AUTO_QA_VALIDATION_SPEC.md  10_LLM_VLM_QA_LAYER.md  11_HUMAN_REVIEW_WORKFLOW.md  12_DATASET_TRAINING_ACTIVE_LEARNING.md  13_COMFYUI_INTEGRATION.md  14_IMPLEMENTATION_ROADMAP_WBS.md  15_RISKS_OPERATIONS_RUNBOOK.md  16_EXTERNAL_FOUNDATION_BOOTSTRAP.md  17_MULTI_PERSON_MULTI_CHARACTER_MASKING_SPEC.md  18_ADULT_ANATOMY_ONTOLOGY_V2_SPEC.md  19_MULTI_PROVIDER_TEACHER_AND_CONTINUOUS_IMPROVEMENT_SPEC.md  20_PROGRESSIVE_AUTONOMOUS_MASK_FACTORY_SPEC.md  21_AUTONOMOUS_REPAIR_EXECUTION_SPEC.md  22_TECHNOLOGY_CURRENCY_AND_MODEL_CHALLENGE_SPEC.md  23_EXTERNAL_SUPERVISION_REFERENCE_DAZ_AND_MINIMAL_REVIEW_SPEC.md  24_AUTONOMOUS_CORE_COMPLETION_AND_COMFYUI_BRIDGE.md  25_SELF_HOSTED_VISUAL_AUTHORITY_AND_RUNPOD_MIGRATION_SPEC.md  26_ADULT_CORPUS_AUTONOMOUS_BATCH_INGESTION_SPEC.md  CHANGELOG_ONTOLOGY.md  CIVITAI_WORKFLOW_INTAKE.md  DECISIONS_LOG.md  DOCKER_RUNTIME_AND_SESSION_USE.md  HORIZON_MULTI_PERSON_GO_NO_GO.md  HORIZON_VIDEO_GO_NO_GO.md  MASKEDWAREHOUSE_SOURCE_REGISTRY.md  MASKEDWAREHOUSE_SPLIT_DEDUP_STRATEGY.md  OPS_LOG.md  RESTART_HANDOFF_20260718.md  RESTART_HANDOFF_AUTONOMOUS_20260719.md  (+2 more)
(+2860 files in other folders)
