[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maskfactory"
version = "0.0.1"
description = "MaskFactory — pixel-perfect body-part mask factory pipeline."
requires-python = ">=3.11"
# NOTE: the authoritative, fully-pinned runtime environment is
# env/requirements.lock.txt + env/maskfactory_env.yml (D9 reproducibility).
# The loose list here is only so `pip install -e .` works in a plain venv/CI.
dependencies = [
    "click",
    "gdown==5.2.0",
    "numpy",
    "pillow",
    "pyyaml",
    "pydantic",
    "jsonschema",
    "loguru",
    "mediapipe==0.10.35",
    "rich",
]

[project.scripts]
maskfactory = "maskfactory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maskfactory = ["schemas/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["Plan", "cvat", "env", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # long spec-reference lines in docstrings; black owns code width

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
